# Webserver

./: CMakeLists.txt  README.md
code/: main.cpp
code/http/: httpconn.cpp  httpconn.h  sqlhandler.hpp
code/log/: log.cpp  log.h
code/pool/: sqlconnpool.hpp  threadpool.hpp
code/server/: server.cpp  server.h
static/: index.html
